fix horizontal scrolling automatically appearing and some vertical scrolling issues

--- a/src/extension/styles/_panel.scss
+++ b/src/extension/styles/_panel.scss
@@ -3,9 +3,10 @@
 }
 
 #panel-container {
+  // set height of panel to all available vertical space minus the height of the header
+  height: calc(100vh - 65px);
   background-color: $darkestBlue;
-  width: 60%;
-  height: 100%;
+  width: 59%;
   overflow-x: none;
   overflow-y: auto;
   border-right: 1px solid #3d424a;
@@ -68,7 +69,26 @@
       }
     }
   }
+
+  .element {
+    .MuiTreeView-root {
+      // set the tree display height to the full available space minus the search bar and header
+      height: calc(100vh - 160px);
+
+      // to avoid vertical scrolling due to list items taking up too much space
+      li {
+        width: 54vw;
+      }
+    }
+  }
 }
+
+// @media (max-width: 599px) {
+//   // height is 100vh - 56px - 85px
+//   #panel-container {
+//     height: calc(100vh - 142px) !important;
+//   }
+// }
 
 ::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
